# webidl-napi

./: index.js  webidl-napi-inl.h  webidl-napi.h
test/exposed/: CMakeLists.txt  exposed-impl.cc  exposed-impl.h  exposed.idl
test/webgpu/: test.js  webgpu-impl.cc  webgpu-impl.h  webgpu.idl
